k8s-eks- manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      # ← Add this block to run migrations first
      containers:
        - name: backend
          image: nash11/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
