k8s-eks- manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP 
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
